tests/fixtures/invalid/bytes_div_str.py
# Cannot divide Bytes and Str
x: float = b"hello" / "hello"
